# shrink

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs  server.rs
static/: styles.css
templates/: base.html  index.html
